--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.5.0",
+    "browserslist": "^4.24.4",
+    "caniuse-lite": "^1.0.30001692",
     "chart.js": "^4.4.0",
     "daisyui": "^3.6.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
