--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "npx update-browserslist-db@latest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
